@@ -31,6 +31,8 @@ namespace evf {
     //
     UInt_t sendInitMessage(UInt_t  fuResourceId,
 			   UInt_t  outModId,
+			   UInt_t  fuProcessId,
+			   UInt_t  fuGuid,
 			   UChar_t*data,
 			   UInt_t  dataSize) throw (evf::Exception);
     
@@ -38,12 +40,16 @@ namespace evf {
 			 UInt_t  runNumber,
 			 UInt_t  evtNumber,
 			 UInt_t  outModId,
+			 UInt_t  fuProcessId,
+			 UInt_t  fuGuid,
 			 UChar_t*data,
 			 UInt_t  dataSize) throw (evf::Exception);
 
     UInt_t sendErrorEvent(UInt_t  fuResourceId,
 			  UInt_t  runNumber,
 			  UInt_t  evtNumber,
+			  UInt_t  fuProcessId,
+			  UInt_t  fuGuid,
 			  UChar_t*data,
 			  UInt_t  dataSize) throw (evf::Exception);
 
@@ -51,6 +57,8 @@ namespace evf {
 			UInt_t  runNumber,
 			UInt_t  evtAtUpdate,
 			UInt_t  folderId,
+			UInt_t  fuProcessId,
+			UInt_t  fuGuid,
 			UChar_t*data,
 			UInt_t  dataSize) throw (evf::Exception);
 
